# NIAF.real

./: .gitignore  .gitmodules  README.md  pyproject.toml  server.py  train.py
client/agilex_cobot_magic/: README.md  action_chunk_broker.py  async_action_chunk_broker.py  constants.py  convert_agilex_data_to_lerobot.py  env.py  main.py  mit_controller.py  pyproject.toml  real_env.py  requirements.txt  robot_utils.py  test_gripper_range.py
configs/: _base.yaml  config_beast.yaml  config_beast_vel.yaml  config_fast.yaml  config_niaf.yaml  config_niaf_vel.yaml  config_oft.yaml
configs/action_stats/: cup.yaml  pick_pineapple.yaml  watercup.yaml
configs/callbacks/: default.yaml
configs/datamodule/: default.yaml  default_vel.yaml
configs/model/: base.yaml  beast.yaml  beast_vel.yaml  fast.yaml  niaf.yaml  niaf_vel.yaml  oft.yaml
debug/: index.html
requirements/: server.txt  train.txt
src/callbacks/: ema.py
src/datasets/: data_module.py  episode_dataset.py
src/debug/: debugger.py
src/models/: base.py  beast.py  beast_vel.py  fast.py  niaf.py  niaf_vel.py  oft.py
src/serving/: base_policy.py  model_loader.py  (+1 more)
tools/: analyze_siren_modulation.py  analyze_static.py  check_siren_vel_config.py  compute_action_stats.py  compute_multifreq_action_stats.py  debug_data.py  debug_train_image.py  export_ema_only_pt.py  patch_serving_ckpt_params.py  plot_aloha_chunk.py  run_aloha_vla_queue.sh  simulate_server_request.py  test_delta_first_pipeline.py  test_model_loss.py  test_siren_loss.py  test_siren_vel_loss.py  verify_action_state.py  verify_debug_vla_outputs.py
(+31 files in other folders)
