[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "niaf"
version = "0.1.0"
description = "Neural Implicit Action Fields – VLA robot policy training framework"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["niaf*"]
